@@ -96,6 +96,10 @@ typedef enum {
 	PKI_ERR_X509_KEYPAIR_GENERATION,
 	PKI_ERR_X509_KEYPAIR_DECODE,
 	PKI_ERR_X509_KEYPAIR_ENCODE,
+	PKI_ERR_X509_KEYPAIR_ENCRYPT_INIT,
+	PKI_ERR_X509_KEYPAIR_ENCRYPT,
+	PKI_ERR_X509_KEYPAIR_DECRYPT_INIT,
+	PKI_ERR_X509_KEYPAIR_DECRYPT,
 	PKI_ERR_X509_KEYPAIR_,
 	// Certificate Operations
 	PKI_ERR_X509_CERT_CREATE,
